// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AppBar Main app bar 1`] = `
<header
  className="MuiPaper-root-8 MuiPaper-shadow4-14 MuiAppBar-root-1 MuiAppBar-positionStatic-4 MuiAppBar-colorDefault-5"
>
  <div
    className="MuiToolbar-root-35 MuiToolbar-gutters-36"
  >
    <p
      className="MuiTypography-root-37 MuiTypography-body1-46"
    >
      Wells Fargo
    </p>
  </div>
</header>
`;

exports[`Storyshots Cards Content card 1`] = `
<div
  className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
>
  <div>
    <h1>
       Content 
    </h1>
  </div>
</div>
`;

exports[`Storyshots Cards Simple card 1`] = `
<div
  className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
>
  <div
    className="MuiCardContent-root-64 MuiCardHeader-root-59"
  >
    <div
      className="MuiCardHeader-content-61"
    >
      <span
        className="MuiTypography-root-37 MuiTypography-headline-42 MuiCardHeader-title-62"
      >
        Title
      </span>
      <span
        className="MuiTypography-root-37 MuiTypography-body1-46 MuiTypography-colorSecondary-57 MuiCardHeader-subheader-63"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root-64"
  >
    fdsa
  </div>
</div>
`;

exports[`Storyshots HighlightBox Account Total 1`] = `
<div
  className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
>
  <div
    className="MuiCardContent-root-64 MuiCardHeader-root-59"
  >
    <div
      className="MuiCardHeader-content-61"
    >
      <span
        className="MuiTypography-root-37 MuiTypography-headline-42 MuiCardHeader-title-62"
      >
        Account Total
      </span>
      <span
        className="MuiTypography-root-37 MuiTypography-body1-46 MuiTypography-colorSecondary-57 MuiCardHeader-subheader-63"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root-64"
  >
    <h1>
      $7,749.34
    </h1>
    <hr
      className="MuiDivider-root-148 MuiDivider-default-149"
    />
    <ul
      className="MuiList-root-153 MuiList-padding-154"
    >
      <li
        className="MuiListItem-root-195 MuiListItem-gutters-202 MuiListItem-default-198"
        disabled={false}
      >
        <div
          className="MuiListItemText-root-205"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots HighlightBox Annulized Percentage Return 1`] = `
<div
  className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
>
  <div
    className="MuiCardContent-root-64 MuiCardHeader-root-59"
  >
    <div
      className="MuiCardHeader-content-61"
    >
      <span
        className="MuiTypography-root-37 MuiTypography-headline-42 MuiCardHeader-title-62"
      >
        Annulized Percentage Return
      </span>
      <span
        className="MuiTypography-root-37 MuiTypography-body1-46 MuiTypography-colorSecondary-57 MuiCardHeader-subheader-63"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root-64"
  >
    <h1>
      3.75%
    </h1>
    <hr
      className="MuiDivider-root-148 MuiDivider-default-149"
    />
    <ul
      className="MuiList-root-153 MuiList-padding-154"
    >
      <li
        className="MuiListItem-root-195 MuiListItem-gutters-202 MuiListItem-default-198"
        disabled={false}
      >
        <div
          className="MuiListItemText-root-205"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Page Test page 1`] = `
<div
  className="MuiGrid-typeContainer-65 MuiGrid-spacing-xs-16-80"
>
  <div
    className="MuiGrid-typeItem-66 MuiGrid-grid-xs-4-87"
  >
    <div
      className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
    >
      <div
        className="MuiCardContent-root-64 MuiCardHeader-root-59"
      >
        <div
          className="MuiCardHeader-content-61"
        >
          <span
            className="MuiTypography-root-37 MuiTypography-headline-42 MuiCardHeader-title-62"
          >
            Title 1
          </span>
          <span
            className="MuiTypography-root-37 MuiTypography-body1-46 MuiTypography-colorSecondary-57 MuiCardHeader-subheader-63"
          />
        </div>
      </div>
      <div
        className="MuiCardContent-root-64"
      >
        <h1>
          1
        </h1>
        <hr
          className="MuiDivider-root-148 MuiDivider-default-149"
        />
        <ul
          className="MuiList-root-153 MuiList-padding-154"
        />
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-typeItem-66 MuiGrid-grid-xs-4-87"
  >
    <div
      className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
    >
      <div
        className="MuiCardContent-root-64 MuiCardHeader-root-59"
      >
        <div
          className="MuiCardHeader-content-61"
        >
          <span
            className="MuiTypography-root-37 MuiTypography-headline-42 MuiCardHeader-title-62"
          >
            Title 3
          </span>
          <span
            className="MuiTypography-root-37 MuiTypography-body1-46 MuiTypography-colorSecondary-57 MuiCardHeader-subheader-63"
          />
        </div>
      </div>
      <div
        className="MuiCardContent-root-64"
      >
        <h1>
          3
        </h1>
        <hr
          className="MuiDivider-root-148 MuiDivider-default-149"
        />
        <ul
          className="MuiList-root-153 MuiList-padding-154"
        />
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-typeItem-66 MuiGrid-grid-xs-4-87"
  >
    <div
      className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
    >
      <div
        className="MuiCardContent-root-64 MuiCardHeader-root-59"
      >
        <div
          className="MuiCardHeader-content-61"
        >
          <span
            className="MuiTypography-root-37 MuiTypography-headline-42 MuiCardHeader-title-62"
          >
            Title 2
          </span>
          <span
            className="MuiTypography-root-37 MuiTypography-body1-46 MuiTypography-colorSecondary-57 MuiCardHeader-subheader-63"
          />
        </div>
      </div>
      <div
        className="MuiCardContent-root-64"
      >
        <h1>
          2
        </h1>
        <hr
          className="MuiDivider-root-148 MuiDivider-default-149"
        />
        <ul
          className="MuiList-root-153 MuiList-padding-154"
        />
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-typeItem-66 MuiGrid-grid-xs-4-87"
  >
    <div
      className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
    >
      <div
        className="MuiCardContent-root-64 MuiCardHeader-root-59"
      >
        <div
          className="MuiCardHeader-content-61"
        >
          <span
            className="MuiTypography-root-37 MuiTypography-headline-42 MuiCardHeader-title-62"
          >
            Title 4
          </span>
          <span
            className="MuiTypography-root-37 MuiTypography-body1-46 MuiTypography-colorSecondary-57 MuiCardHeader-subheader-63"
          />
        </div>
      </div>
      <div
        className="MuiCardContent-root-64"
      >
        <h1>
          2
        </h1>
        <hr
          className="MuiDivider-root-148 MuiDivider-default-149"
        />
        <ul
          className="MuiList-root-153 MuiList-padding-154"
        />
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-typeItem-66 MuiGrid-grid-xs-4-87"
  >
    <div
      className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
    >
      <div
        className="MuiCardContent-root-64 MuiCardHeader-root-59"
      >
        <div
          className="MuiCardHeader-content-61"
        >
          <span
            className="MuiTypography-root-37 MuiTypography-headline-42 MuiCardHeader-title-62"
          >
            Title 5
          </span>
          <span
            className="MuiTypography-root-37 MuiTypography-body1-46 MuiTypography-colorSecondary-57 MuiCardHeader-subheader-63"
          />
        </div>
      </div>
      <div
        className="MuiCardContent-root-64"
      >
        <h1>
          2
        </h1>
        <hr
          className="MuiDivider-root-148 MuiDivider-default-149"
        />
        <ul
          className="MuiList-root-153 MuiList-padding-154"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Saldo Playground 1`] = `
<div
  className="MuiPaper-root-8 MuiPaper-shadow2-12 MuiPaper-rounded-9"
>
  <div
    className="MuiCardContent-root-64 MuiCardHeader-root-59"
  >
    <div
      className="MuiCardHeader-content-61"
    >
      <span
        className="MuiTypography-root-37 MuiTypography-headline-42 MuiCardHeader-title-62"
      >
        Saldo
      </span>
      <span
        className="MuiTypography-root-37 MuiTypography-body1-46 MuiTypography-colorSecondary-57 MuiCardHeader-subheader-63"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root-64"
  >
    <table
      className="MuiTable-root-157"
    >
      <tbody
        className="MuiTableBody-root-158"
      >
        <tr
          className="MuiTableRow-root-159"
        >
          <td
            className="MuiTableCell-root-165 withStyles-TableCellWrapper--root-164 MuiTableCell-padding-168"
          >
            investedSharesValue
          </td>
          <td
            className="MuiTableCell-root-165 withStyles-TableCellWrapper--root-164 MuiTableCell-padding-168"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $700.00
          </td>
        </tr>
        <tr
          className="MuiTableRow-root-159"
        >
          <td
            className="MuiTableCell-root-165 withStyles-TableCellWrapper--root-164 MuiTableCell-padding-168"
          >
            earnedSharesValue
          </td>
          <td
            className="MuiTableCell-root-165 withStyles-TableCellWrapper--root-164 MuiTableCell-padding-168"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $74.93
          </td>
        </tr>
        <tr
          className="MuiTableRow-root-159"
        >
          <td
            className="MuiTableCell-root-165 withStyles-TableCellWrapper--root-164 MuiTableCell-padding-168"
          >
            bonusSharesValue
          </td>
          <td
            className="MuiTableCell-root-165 withStyles-TableCellWrapper--root-164 MuiTableCell-padding-168"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $0.00
          </td>
        </tr>
        <tr
          className="MuiTableRow-root-159"
        >
          <td
            className="MuiTableCell-root-165 MuiTableCell-padding-168"
          >
            reinvestedSharesValue
          </td>
          <td
            className="MuiTableCell-root-165 MuiTableCell-padding-168"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $0.00
          </td>
        </tr>
        <tr
          className="MuiTableRow-root-159"
        >
          <td
            className="MuiTableCell-root-165 withStyles-TableCellWrapper--root-164 MuiTableCell-padding-168"
          >
            totalSharesValue
          </td>
          <td
            className="MuiTableCell-root-165 withStyles-TableCellWrapper--root-164 MuiTableCell-padding-168"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $774.93
          </td>
        </tr>
      </tbody>
    </table>
    <button
      className="MuiButtonBase-root-186 MuiButton-root-172 MuiButton-raised-179"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label-174"
      >
        Sell Shares
      </span>
      <span
        className="MuiTouchRipple-root-188"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots StockGraph Playground 1`] = `
<div
  className="my-pretty-chart-container"
>
  <div
    id="chart"
    style={
      Object {
        "height": "300px",
        "width": "400px",
      }
    }
  >
    <div>
      Rendering Chart
    </div>
  </div>
</div>
`;
